added tomcat restarts where necessary